// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders correctly 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
>
  <div
    className="dULmiX"
  >
    <div
      className="jrfZaf"
    >
      <div
        className="kTfRpw"
        value={50}
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders correctly 2`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
>
  <div
    className="dULmiX"
  >
    <div
      className="jrfZaf"
    >
      <div
        className="hYIhvA"
        value={50}
      />
    </div>
  </div>
</div>
`;
